add: add AddSinglePersonAndMatch logic and debug
